# jupyterlab-topbar

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .stylelintcache  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dev-install.sh  environment.yml  install.json  lerna.json  package-lock.json  package.json  postBuild  pyproject.toml  requirements.txt  setup.py  tsconfig.eslint.json  tsconfigbase.json
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  packaging.yml  prep-release.yml  publish-release.yml
binder/: environment.yml  postBuild
jupyterlab-topbar/: package-lock.json  package.json
jupyterlab-topbar-extension/: package.json
jupyterlab-topbar-extension/schema/: plugin.json
jupyterlab-topbar-extension/src/: textView.tsx
jupyterlab-topbar-extension/style/: index.css
scripts/: bump-top-level-package.py
src/: index.ts
style/: index.css
