[build-system]
requires = ["hatchling>=1.5.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-topbar-extensions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.jupyter-releaser.options]
version-cmd = "hatch version"
python-packages = [
    "packages/logout-extension:jupyterlab_logout",
    "packages/topbar-text-extension:jupyterlab_topbar_text",
    "packages/theme-toggler-extension:jupyterlab_theme-toggler",
]
dist-dir = "dist"
npm-install-options = "--legacy-peer-deps"
# Down side is that checks will be duplicated due to such a config.
# Not sure we can avoid it here
pydist-extra-check-cmds = [
    "pipx run 'validate-pyproject[all]' packages/*/pyproject.toml",
    "pipx run check-wheel-contents --config packages/logout-extension/pyproject.toml {dist_dir}/jupyterlab_logout*.whl",
    "pipx run check-wheel-contents --config packages/topbar-text-extension/pyproject.toml {dist_dir}/jupyterlab_topbar_text*.whl",
    "pipx run check-wheel-contents --config packages/theme-toggler-extension/pyproject.toml {dist_dir}/jupyterlab_theme_toggler*.whl",
]
release-message = "[ci skip] Publish {version}"
tag-message = "[ci skip] Release {tag_name}"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm run build:prod",
]
